--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
   </head>
-  <body>
+  <body onload="cargarNombreUsuario()"> <!--onload="cargarNombreUsuario()" Tengo que escribir asi porq con las // no me funciona
+  onload es un evento, que lo que hace es que cuando se cargue el body cargue la funcion que llamo ahi, y la busca y carga en el spam-->
     <nav class="site-header sticky-top py-1 bg-dark">
       <div class="container d-flex flex-column flex-md-row justify-content-between">
         <a class="py-2 d-none d-md-inline-block" href="index.html">Inicio</a>
@@ -22,6 +23,7 @@
         <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
         <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
       </div>
+      <span class="py-2 d-none d-md-inline-block" id="spanUsuarioIndex" style="color:white;"></span>
     </nav>
     <main role="main">
       <section class="jumbotron text-center">
@@ -104,6 +106,6 @@
     </footer>
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="js/init.js"></script>
+    <script type="text/javascript" src="js/init.js"></script>
   </body>
 </html>
