--- a/login.html
+++ b/login.html
@@ -66,9 +66,13 @@ input:focus { box-shadow: inset 0 -5px 45px rgba(100,100,100,0.4), 0 1px 1px rgb
 <div class="login">
 	<h1>Login</h1>
     <form method="post" action="index.html"> 
-    	<input type="text" name="u" placeholder="Username" required="required" />
+    	<input type="text" name="u" id="userName"placeholder="Username" required="required" />
         <input type="password" name="p" placeholder="Password" required="required" />
-        <button type="submit" class="btn btn-primary btn-block btn-large">Let me in.</button>
+        <button type="submit" onclick="usuario()" id="logginButton"class="btn btn-primary btn-block btn-large">Let me in.</button>
     </form>
 </div>
-</body></html>
+</body>
+
+<script type="text/javascript" src="js/login.js"></script>
+
+</html>
