--- a/products.html
+++ b/products.html
@@ -13,7 +13,8 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
   </head>
-  <body>
+  <body onload="cargarNombreUsuarioProducts()"> <!--onload="cargarNombreUsuarioProductos()" 
+     onload es un evento, que lo que hace es que cuando se cargue el body cargue la funcion que llamo ahi, y la busca y carga en el spam-->
     <nav class="site-header sticky-top py-1 bg-dark">
       <div class="container d-flex flex-column flex-md-row justify-content-between">
         <a class="py-2 d-none d-md-inline-block" href="index.html">Inicio</a>
@@ -21,13 +22,60 @@
         <a class="py-2 d-none d-md-inline-block" href="products.html">Productos</a>
         <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
         <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
+       
       </div>
+      <span class="py-2 d-none d-md-inline-block" id="spanUsuarioProducts" style="color:white;"></span>
     </nav>
     <div class="container p-5">
       <div class="text-center p-4">
          <h2>PRODUCTOS</h2>
         <p class="lead">Verás aquí la lista de productos </p>
     </div>
+    <main role="main" class="pb-5">
+      <div class="container">
+          <div class="row">
+              <div class="col text-right"> <!--Agrego los botones para ordenar y su id -->
+                  <div class="btn-group btn-group-toggle mb-4" data-toggle="buttons">
+                      <label class="btn btn-light active" id="Asc" >
+                          <input type="radio" name="options" autocomplete="off" checked>🔼$
+                      </label>
+                      <label class="btn btn-light" id="Desc" >
+                          <input type="radio" name="options" autocomplete="off">🔽$
+                      </label>
+                      <label class="btn btn-light" id="ByCount" >
+                          <input type="radio" name="options" autocomplete="off"><i class="fas fa-sort-amount-down mr-1"></i>Relevancia
+                      </label>
+                  </div>
+              </div>
+          </div>
+          <div class="row justify-content-end">
+            <div class="col-md-6"></div>
+              <div class="col-md-6 col-sm-12 mb-1 container">
+                <div class="row container p-0 m-0">
+                  <div class="col">
+                    <p class="font-weight-normal text-right my-2">Cant.</p>
+                  </div>
+                  <div class="col">  <!-- Para agregar el precio minimo y maximo -->
+                    <input class="form-control" type="number" placeholder="min." id="rangeFilterCountMin">
+                  </div>
+                  <div class="col">
+                    <input class="form-control" type="number" placeholder="máx." id="rangeFilterCountMax">
+                  </div>
+                  <div class="col-3 p-0">
+                    <div class="btn-group" role="group">
+                      <button class="btn btn-light btn-block" id="rangeFilterCount">Filtrar</button>
+                      <button class="btn btn-link btn-sm" id="clearRangeFilter">Limpiar</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+          </div>
+          <div class="row">
+              <div class="list-group" id="cat-list-container">
+              </div>
+          </div>
+      </div>
+  </main>
     <div class="list-group" id="lista_de_productos"> 
     </div>
   <footer class="text-muted bg-light">
